Modify project to get it working with my local conf
  - Fix some lint findings.